--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tabler/icons-react": "^3.14.0",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "recharts": "^2.12.7"
